# Inventory-Management-API

./: .env-example  .gitignore  load_test.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1b3d2bec8d68_initial_tables.py  6cd640c7656e_update_user_model.py  83070dd5c509_add_constraints_and_ctegory_id_fk.py
app/: main.py  models.py
app/auth/: dependencies.py  models.py  router.py  schemas.py  utils.py
app/categories/: models.py
app/core/: config.py  database.py  logging_config.py
app/items/: models.py  router.py  schemas.py
db/: database.py
models/: models.py
routers/: item.py
schemas/: item.py
